created two controllers for audio and text searches
