# backend/api/swagger/swagger.yaml
@@ -4,9 +4,9 @@ info:
   title: Hello World App
 # during dev, should point to your local machine
 host: localhost:10010
-# basePath prefixes all resource paths 
+# basePath prefixes all resource paths
 basePath: /
-# 
+#
 schemes:
   # tip: remove http to make production-grade
   - http
@@ -42,11 +42,73 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /audio-search:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: audio_search
+    post:
+      description: Returns top search result
+      operationId: audioSearch
+      parameters:
+        - name: audioFile
+          in: formData
+          description: Audio of search query
+          required: true
+          type: file
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/AudioSearchResponse"
+        "400":
+          description: Missing or invalid request input
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        "500":
+          description: Internal Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /text-search:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: text_search
+    post:
+      description: Returns top search result
+      operationId: textSearch
+      parameters:
+        - name: searchString
+          in: formData
+          description: Search query
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/TextSearchResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
   HelloWorldResponse:
+    required:
+      - message
+    properties:
+      message:
+        type: string
+  AudioSearchResponse:
+    required:
+      - message
+    properties:
+      message:
+        type: string
+  TextSearchResponse:
     required:
       - message
     properties:
